--- a/source-css/lyraquisition.css
+++ b/source-css/lyraquisition.css
@@ -352,6 +352,22 @@ width: 256px;
 height: 300px;
 background-image: url(%%wow%%);
 }
+a[href|="/shrek"] {
+display: block;
+clear: none;
+float: left;
+width: 218px;
+height: 241px;
+background-image: url(%%shrekmote%%);
+}
+a[href|="/lyraponytail"] {
+display: block;
+clear: none;
+float: left;
+width: 174px;
+height: 157px;
+background-image: url(%%lyraponytail%%);
+}
 .flair:before{
     display:inline-block;
     width:10px;
