--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1956,6 +1956,7 @@ a[href|="/mspluna"],
 a[href|="/mspsweetie"],
 a[href|="/mspscootaloo"],
 a[href|="/mspapplebloom"],
+a[href|="/keytarsolo"],
 a[href|="/yuubutts"],
 a[href|="/teiyourenaked"]
 {
@@ -2026,6 +2027,11 @@ a[href|="/mspapplebloom"]
 {
 	width: 81px;
 	background-position: -184px -280px;
+}
+a[href|="/keytarsolo"]
+{
+	width: 116px;
+	background-position: -265px -280px;
 }
 a[href|="/yuubutts"]
 {
