--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -195,12 +195,12 @@ h3.imgTitle{
     color: #000;
 }
 
-.side a[href="http://www.reddit.com/r/MLPLounge/new/"]
+.side a[href="/r/MLPLounge/new/"]
 {
  display:block;
- width:73px;
- height:80px;
- background:url(%%fillycel%%);
+ width:80px;
+ height:121px;
+ background:url(%%discordfilly%%);
  position:fixed; 
  top:260px;
  right:-5px;
