--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -24,11 +24,11 @@ DC06 - Bannercat hover
     }
 
 .titlebox .number:after {
-    content: " Law Abiding Judges"
+    content: " Butt-gif lovers"
     }
 
 div.titlebox .users-online span.number:after {
-    content: " Plotting Justice"
+    content: " Buying Apples"
     }
 
 /*------------------------ Changes background -------------------------------*/
