--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -611,13 +611,13 @@ a[href|="/skatiepie"] {
     height: 150px;
     background-image: url(%%skatiepie%%) 
     }
-a[href|="/salutalo"] {
+a[href|="/twusquint"] {
     display: block;
     clear: none;
     float: left;
-    width: 150px;
-    height: 80px;
-    background-image: url(%%salutalo%%) 
+    width: 70px;
+    height: 70px;
+    background-image: url(%%twusquint%%) 
     }
 
 /*Side Bar*/
