--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -340,11 +340,11 @@ vertical-align: middle;
  */
 
 /* 70x70a 'motes. */
-a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"]
+a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"], a[href|="/ajduckface"]
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
-a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"], a[href|="/lunahmm"], a[href|="/scootexcited"], a[href|="/fluttereyebrow"], a[href|="/smugcolgate"], a[href|="/trixielecture"], a[href|="/ajdur"], a[href|="/sadshy"], a[href|="/ajdoubt"], a[href|="/discoin"], a[href|="/twidoubt"], a[href|="/ppdoubt"], a[href|="/raridoubt"], a[href|="/flutterdoubt"], a[href|="/dashdoubt"]
+a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"], a[href|="/lunahmm"], a[href|="/scootexcited"], a[href|="/fluttereyebrow"], a[href|="/smugcolgate"], a[href|="/trixielecture"], a[href|="/ajdur"], a[href|="/sadshy"], a[href|="/ajdoubt"], a[href|="/discoin"], a[href|="/twidoubt"], a[href|="/ppdoubt"], a[href|="/raridoubt"], a[href|="/flutterdoubt"], a[href|="/dashdoubt"], a[href|="/deviousmac"]
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -381,7 +381,7 @@ a[href|="/twitiger"], a[href|="/twiger"], a[href|="/tanktwi"], a[href|="/lunacel
 {background-image:url(%%misfitsc%%);display:block;float:left;}
 
 /* Misfits d */
-a[href|="/sonavinyl"], a[href|="/pinkierage"], a[href|="/pinkrage"], a[href|="/lunadashkiss"], a[href|="/deathdudeandmeerkat"], a[href|="/readingrainbow"]
+a[href|="/sonavinyl"], a[href|="/pinkierage"], a[href|="/pinkrage"], a[href|="/lunadashkiss"], a[href|="/deathdudeandmeerkat"], a[href|="/readingrainbow"], a[href|="/sbnice"], a[href|="/absolutelynice"], a[href|="/bighead"], a[href|="/imustgomypeopleneedme"]
 {background-image:url(%%misfitsd%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -443,7 +443,7 @@ a[href|="/gildaconfused"], a[href|="/ajdoubt"], a[href|="/grimfluff"]
 {background-position: -100% -400%;}
 
 /* Grid pos 2,4 'motes */
-a[href|="/rarityspy"], a[href|="/discoin"]
+a[href|="/rarityspy"], a[href|="/discoin"], a[href|="/ajduckface"]
 {background-position: -200% -400%;}
 
 /* Grid pos 0,5 'motes */
@@ -465,6 +465,10 @@ a[href|="/flutterdoubt"]
 /* Grid pos 1,6 'motes */
 a[href|="/dashdoubt"]
 {background-position: -100% -600%;}
+
+/* Grid pos 2,6 'motes */
+a[href|="/deviousmac"]
+{background-position: -200% -600%;}
 
 /* Text Emotes */
 a[href|="/gravestone"] em, a[href|="/theydied"] em
@@ -505,6 +509,10 @@ a[href|="/manspikeheythere"], a[href|="/msheythere"], a[href|="/spikeheythere"] 
 a[href|="/lyrapimpstrings"] {background-image: url(%%lyrapimpstrings%%);width:159px;height:170px;display:block;float:left;}
 a[href|="/woonatype"] {background-image: url(%%woonatype%%);width:200px;height:187px;display:block;float:left;}
 a[href|="/octabelleintensifies"], a[href|="/octybelleintensifies"] {background-image: url(%%octabelleintensifies%%);width:113px;height:150px;display:block;float:left;}
+a[href|="/crazytwi"] {background-image: url(%%crazytwi%%);width:130px;height:150px;display:block;float:left;}
+a[href|="/applebrow"] {background-image: url(%%applebrow%%);width:100px;height:90px;display:block;float:left;}
+a[href|="/downvotingpony"] {background-image: url(%%downvotingpony%%);width:230px;height:185px;display:block;float:left;}
+a[href|="/raribrows"] {background-image: url(%%raribrows%%);width:122px;height:110px;display:block;float:left;}
 
 /* Misfit Emotes */
 a[href|="/fillycadance"] {width:100px;height:126px;}
@@ -554,3 +562,5 @@ a[href|="/lunadash"], a[href|="/dabkilmandmeerkat"] {width:200px;height:137px;ba
 a[href|="/pinkierage"], a[href|="/pinkrage"] {width:200px;height:167px;background-position: -300px 0;}
 a[href|="/lunadashkiss"], a[href|="/deathdudeandmeerkat"] {width:300px;height:152px;background-position: -500px 0;}
 a[href|="/readingrainbow"] {width:177px;height:250px;background-position: -823px 0;}
+a[href|="/sbnice"], a[href|="/absolutelynice"] {width:300px;height:192px;background-position: 0 -235px;}
+a[href|="/bighead"], a[href|="/imustgomypeopleneedme"] {width:123px;height:196px;background-position: -300px -167px;}
