--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -611,7 +611,8 @@ a[href|="/floatavia"] {
  float: left; 
  width: 72px;
  height: 200px;
- background-image: url(%%floatavia%%);
+ background-image: url(%%spritesheet17%%);
+ background-position: -0px -150px;
 } 
 
 a[href|="/floatywubs"] {  
@@ -620,7 +621,8 @@ a[href|="/floatywubs"] {
  float: left; 
  width: 83px;
  height: 200px;
- background-image: url(%%floatywubs%%);
+ background-image: url(%%spritesheet17%%);
+ background-position: -0px -350px;
 } 
 
 a[href|="/lyracuteblanket"] {  
@@ -656,7 +658,8 @@ a[href|="/chibitavicello"] {
  float: left; 
  width: 140px;
  height: 150px;
- background-image: url(%%chibitavicello%%);
+ background-image: url(%%spritesheet17%%);
+ background-position: -0px -0px;
 } 
 
 a[href|="/tavivinylbathtime"] {  
@@ -1663,7 +1666,8 @@ a[href|="/grumpyfillyrd"] {
  float: left; 
  width: 129px;
  height: 150px;
- background-image: url(%%grumpyfillyrd%%);
+ background-image: url(%%spritesheet17%%);
+ background-position: -0px -550px;
 } 
 
 
@@ -2132,4 +2136,24 @@ a[href|="/pinkiepiemouth"] {
  height: 150px;
  background-image: url(%%spritesheet16%%);
  background-position: -0px -300px; 
+} 
+
+a[href|="/zirconia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 138px;
+ height: 150px;
+ background-image: url(%%spritesheet17%%);
+ background-position: -0px -700px;
+} 
+
+a[href|="/pinquay"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%spritesheet17%%);
+ background-position: -0px -850px;
 } 
