--- a/source-css/twiquisition.css
+++ b/source-css/twiquisition.css
@@ -294,6 +294,22 @@ width: 120px;
 height: 150px;
 background-image: url(%%twilightthegrey%%);
 }
+a[href|="/sbrapestare"] {
+display: block;
+clear: none;
+float: left;
+width: 557px;
+height: 570px;
+background-image: url(%%sbrapestare%%);
+}
+a[href|="/twihomer"] {
+display: block;
+clear: none;
+float: left;
+width: 162px;
+height: 250px;
+background-image: url(%%twihomer%%);
+}
 .subscribers .word {
 display: none;
 }  
